Veritabanı değişikleri yapıldı

--- a/KolejDenemeProjesi.Entities/KolejDenemeProjesi.Entities.csproj
+++ b/KolejDenemeProjesi.Entities/KolejDenemeProjesi.Entities.csproj
@@ -41,27 +41,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Branslar.cs" />
     <Compile Include="Burslar.cs" />
     <Compile Include="BursTipleri.cs" />
     <Compile Include="Dersler.cs" />
-    <Compile Include="DersProgramiDersleri.cs" />
-    <Compile Include="DersProgramiDersOgretmenleri.cs" />
-    <Compile Include="DersProgramlari.cs" />
+    <Compile Include="Devamsizlik.cs" />
     <Compile Include="DonemGunBilgileri.cs" />
     <Compile Include="Donemler.cs" />
     <Compile Include="DonemTakvimi.cs" />
     <Compile Include="GunTipleri.cs" />
+    <Compile Include="Init\EnumValueFunction.cs" />
+    <Compile Include="Init\KisiTipleri.cs" />
+    <Compile Include="Kisiler.cs" />
     <Compile Include="Kullanicilar.cs" />
     <Compile Include="KullaniciTipleri.cs" />
     <Compile Include="Messages\ErrorMessageObj.cs" />
     <Compile Include="Messages\ErrorMessages.cs" />
     <Compile Include="MyEntityBase.cs" />
+    <Compile Include="OgrenciKayitlari.cs" />
     <Compile Include="Ogrenciler.cs" />
-    <Compile Include="OgrenciTipDonem.cs" />
     <Compile Include="OgrenciVelileri.cs" />
     <Compile Include="OgrenimTipleri.cs" />
+    <Compile Include="OgretmenKayitlari.cs" />
     <Compile Include="Ogretmenler.cs" />
+    <Compile Include="OgretmenUnvanlari.cs" />
     <Compile Include="OkulBilgileri.cs" />
+    <Compile Include="PersonelKayitlari.cs" />
+    <Compile Include="Personeller.cs" />
+    <Compile Include="PersonelTipleri.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SinifSeviyeleri.cs" />
     <Compile Include="Subeler.cs" />
