--- a/KolejDenemeProjesi.Web/Web.config
+++ b/KolejDenemeProjesi.Web/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
     <connectionStrings>
-        <add name="DatabaseContext" connectionString="Server=NIRVANA;Database=KolejVeriler;Integrated Security=SSPI;"
+        <add name="DatabaseContext" connectionString="Server=NIRVANA;Database=Kolej_Aralik_2017;Integrated Security=SSPI;"
             providerName="System.Data.SqlClient" />
         <add name="KolejDenemeProjesiWebContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=KolejDenemeProjesiWebContext-20171111181551; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KolejDenemeProjesiWebContext-20171111181551.mdf"
             providerName="System.Data.SqlClient" />
